--- a/templates/torsion/modify.html
+++ b/templates/torsion/modify.html
@@ -224,7 +224,7 @@
           <ol class="breadcrumb border-0 m-0">
             <li class="breadcrumb-item"><a href="main">Home</a></li>
             <li class="breadcrumb-item"><a href="torsion/list">Torsion Test List</a></li>
-            <li class="breadcrumb-item active"><a href="torsion/new">Torsion RB Test</a></li>
+            <li class="breadcrumb-item active"><a href="torsion/new">Torsion Test</a></li>
             <!-- Breadcrumb Menu-->
           </ol>
         </div>
