--- a/templates/torsion/new.html
+++ b/templates/torsion/new.html
@@ -83,7 +83,7 @@
           <a class="c-sidebar-nav-link" href="tooth/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
-            </svg> Tooth Bending
+            </svg> Gear Tooth Bending
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
